# Project-Search

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
.github/workflows/: main.yml
app/: __init__.py
app/configuration/: __init__.py  logger.py  server.py
app/internal/pkg/middlewares/: handle_http_exceptions.py
app/internal/repository/: __init__.py  repository.py
app/internal/repository/postgresql/: __init__.py  profiles.py  users.py
app/internal/repository/postgresql/handlers/: collect_response.py  handle_exception.py
app/internal/routes/: __init__.py  auth.py  profile.py  users.py
app/internal/services/: __init__.py  auth.py  jwt.py  profile.py  users.py
app/pkg/connectors/: __init__.py  resources.py
app/pkg/models/: __init__.py
app/pkg/models/app/: jwt.py  profile.py  user.py
app/pkg/models/base/: __init__.py  exception.py  model.py
app/pkg/models/core/: __init__.py  containers.py  meta.py  routes.py
app/pkg/models/exceptions/: users.py
app/pkg/models/exceptions/association/: __init__.py  aiopg.py
app/pkg/models/types/: __init__.py  secret_bytes.py  strings.py
app/pkg/settings/: settings.py
app/pkg/utils/: __init__.py  generate_rsa_keys.py
docker/api/: Dockerfile
docker/migrations/: Dockerfile
migrations/: 20240508_01_AGOLw-users.py  20240511_01_H0r83-users-skills.py  20240511_02_iiJSO-profiles.py  20240606_01_YwSRu-profiles.py
scripts/: migrate.py
tests/: conftest.py
tests/app/internal/repository/user/: test_create.py  test_read.py
tests/fixtures/: settings.py
tests/fixtures/models/: generators.py
tests/fixtures/repository/postgresql/: inserters.py  postgresql.py  repositories.py
