[tool.poetry]
name = "test"
version = "0.1.0"
description = "Test"
authors = ["Alexandr"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.13"}
dependency-injector = "^4.40.0"
yoyo-migrations = "^8.1.0"
aiopg = "^1.3.3"
jsf = "^0.7.1"
httpx = "^0.27.0"


[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^0.23.7"
coverage = "^6.3.2"
pytest-cov = "^4.0.0"
pytest-repeat = "^0.9.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
