[tool.poetry]
name = "test"
version = "0.1.0"
description = "Test"
authors = ["Alexandr"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.100.0"
uvicorn = "^0.22.0"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.13"}
dependency-injector = "^4.40.0"
yoyo-migrations = "^8.1.0"
aiopg = "^1.3.3"
jsf = "^0.7.1"
httpx = "^0.27.0"
pyjwt = "^2.8.0"
cryptography = "^42.0.4"
bcrypt = "^4.1.2"


[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^0.23.7"
coverage = "^6.3.2"
pytest-cov = "^4.0.0"
pytest-repeat = "^0.9.1"

[tool.poetry.group.formatters.dependencies]
isort = "^5.10.1"
black = "^22.1.0"

[tool.poetry.group.linters.dependencies]
flake8 = "^4.0.1"
pylint = "^2.17.6"
ruff = "^0.1.8"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
